--- a/chatgpt.html
+++ b/chatgpt.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Assistente Virtual</h2>
+        <h2>Assistente Buda</h2>
         <div class="input-box">
             <input type="text" id="userInput" placeholder="Digite sua pergunta aqui...">
             <button onclick="responder()">Enviar</button>
@@ -68,7 +68,9 @@
 
             if (input.includes("como você está")) {
                 resposta = "Estou bem, obrigado por perguntar!";
-               } if(input.includes("cona")){
+               } if(input.includes("como aprender programação?")){
+                resposta = "Liga pra o Pequeno Buda";
+            }if(input.includes("cona")){
                 resposta = "Não seja rude!";
             } else if (input.includes("qual é o seu nome")) {
                 resposta = "Sou um assistente virtual criado em JavaScript.";
