--- a/chatgpt.html
+++ b/chatgpt.html
@@ -6,6 +6,7 @@
     <title>Assistente Virtual</title>
     <style>
         body {
+            font-family:monospace;
         font-size:18px;            font-family: Arial, serif;
             background-image: linear-gradient(to right,#ff0018ff,#ff40b6ff);
             display: flex;
